src/test/ui/rfcs/rfc-2574-simd-ffi/simd-ffi-x86.stderr
error: use of SIMD type `v256` in FFI requires `#[target_feature(enable = "avx")]`
  --> $DIR/simd-ffi-x86.rs:33:22
   |
LL |     fn quux_fail2(x: v256);
   |                      ^^^^

error: use of SIMD type `v512` in FFI requires `#[target_feature(enable = "acx512")]`
  --> $DIR/simd-ffi-x86.rs:43:23
   |
LL |     fn quuux_fail2(x: v512);
   |                       ^^^^

error: use of SIMD type `v512` in FFI requires `#[target_feature(enable = "acx512")]`
  --> $DIR/simd-ffi-x86.rs:45:23
   |
LL |     fn quuux_fail3(x: v512);
   |                       ^^^^

error: aborting due to 3 previous errors

